EEC_InitBackup/src/objects/FCC_Provider_Assistants__c.object
<CustomObject>
    <description>Junction object between 2 Account objects (FCC Provider Recordtype and FCC Assistant Recordtype)</description>
    <fields>
        <fullName>Added__c</fullName>
        <formula>Current__c = TRUE 
&amp;&amp; 
isCopied__c = FALSE 
&amp;&amp; 
ISBLANK( End_Date__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Added</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>AssistantNotificationEmailSent__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>This flagged is used in the Process Flow &quot;Notify FCC Assistant when Added/Removed on a Provider&quot; to notify the assistant.</inlineHelpText>
        <label>AssistantNotificationEmailSent</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Assistant_Certificate_Number__c</fullName>
        <formula>FCC_Assistant__r.Current_License_Number__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Assistant Certificate Number</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Certificate_Expiration_Date__c</fullName>
        <formula>FCC_Assistant__r.Renewal_date__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Certificate Expiration Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Current__c</fullName>
        <formula>ISBLANK( End_Date__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Current</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>End_Date__c</fullName>
        <label>End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>FCC_Assistant_Email__c</fullName>
        <label>FCC Assistant Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>FCC_Assistant__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>FCC Assistant</label>
        <lookupFilter>
            <active>true</active>
            <booleanFilter>1</booleanFilter>
            <filterItems>
                <field>Account.RecordType.Name</field>
                <operation>equals</operation>
                <value>FCC Assistant, Family Child Care</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Providers This Assistant Works For</relationshipLabel>
        <relationshipName>FCC_Provider_Assistants1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>FCC_Provider__c</fullName>
        <label>FCC Provider</label>
        <lookupFilter>
            <active>true</active>
            <booleanFilter>1 OR (2 AND 3)</booleanFilter>
            <filterItems>
                <field>Account.RecordType.Name</field>
                <operation>equals</operation>
                <value>Family Child Care</value>
            </filterItems>
            <filterItems>
                <field>Account.RecordType.Name</field>
                <operation>equals</operation>
                <value>FCC Assistant</value>
            </filterItems>
            <filterItems>
                <field>Account.Allow_New_Application_as_Provider__c</field>
                <operation>equals</operation>
                <value>True</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Assistants Working for this Provider</relationshipLabel>
        <relationshipName>FCC_Provider_Assistants</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>IsSupervisorOrAbove__c</fullName>
        <formula>OR(CONTAINS($UserRole.Name, &apos;Supervisor&apos;),CONTAINS($UserRole.Name, &apos;Director&apos;))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>IsSupervisorOrAbove</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Licensing_Transaction__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Licensing Transaction</label>
        <referenceTo>Licensing_Transaction__c</referenceTo>
        <relationshipLabel>FCC Provider Assistants</relationshipLabel>
        <relationshipName>FCC_Provider_Assistants</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Provider_Email__c</fullName>
        <label>Provider Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Provider_Licensor__c</fullName>
        <formula>FCC_Provider__r.Licensor_Full_Name__c</formula>
        <label>Provider Licensor</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Removed__c</fullName>
        <formula>NOT(ISBLANK( End_Date__c ))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Removed</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Start_Date__c</fullName>
        <label>Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>isCopied__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This field will inform the user if the current provider assistant is a copy from the original transaction or the original ones.</description>
        <label>isCopied</label>
        <type>Checkbox</type>
    </fields>
    <label>FCC Provider Assistants</label>
    <nameField>
        <displayFormat>Asst-{00000}</displayFormat>
        <label>ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>FCC Provider Assistants</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
    <validationRules>
        <fullName>Insufficient_privileges_to_select_FCC</fullName>
        <active>true</active>
        <errorConditionFormula>IF(
AND(FCC_Assistant__r.RecordType.Name = &apos;Family Child Care&apos;,  NOT(IsSupervisorOrAbove__c)),true, false)</errorConditionFormula>
        <errorDisplayField>FCC_Assistant__c</errorDisplayField>
        <errorMessage>Only EEC users above/equal to &apos;Supervisor&apos; role can select &apos;Family Child Care&apos; record type. Otherwise only use &apos;FCC Assistant&apos; record type.</errorMessage>
    </validationRules>
</CustomObject>